# DesHacheThe

./: README.md  node_launcher_config.xml  project_architecture.drawio  sysinfo_extract_example.xml  sysinfo_extract_example.xsd
dht_core/: Cargo.toml  Dockerfile
dht_core/src/: cli.rs  database.rs  main.rs  network.rs  rest_api.rs  sysinfo_extractor.rs
node_launcher/: requirements.txt
node_launcher/src/: main.py
node_launcher/src/static/css/: home.css
node_launcher/src/static/scripts/: script.js
node_launcher/src/static/xforms/: create_machine.xhtml  delete_machine.xhtml  update_machine.xhtml
node_launcher/src/static/xslt/: example.xslt  example2.xslt
node_launcher/src/templates/: home.html  modify_database.html
