[package]
name = "dht_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.4.12", features = ["derive"]}
futures = "0.3.30"
futures-util = "0.3.30"
libp2p = {version = "0.53.2", features = ["mdns", "async-std", "dns", "kad", "noise", "macros", "tcp", "yamux", "request-response"]}
serde = {version="1.0.194", features = ["derive"]}
tokio = {version = "1.35.1", features = ["full"]}
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
warp = "0.3.6"
